fluxcd/apps/overlays/production/fairer-pages/httproute-cell-membrane-overflow-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fairer-pages-cell-membrane-overflow-2
  namespace: tingle-tuner
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: hyrule-castle
  hostnames:
    # More prplanit.com subdomains
    - "penpot.prplanit.com"
    - "quay.prplanit.com"
    - "sso.prplanit.com"
    - "trmm.prplanit.com"
    # precisionplanit.com subdomains
    - "autoconfig.precisionplanit.com"
    - "autodiscover.precisionplanit.com"
    - "kb.precisionplanit.com"
    - "mail.precisionplanit.com"
    # optcp.com
    - "jseer.optcp.com"
    # uni2.cc
    - "sh.uni2.cc"
    # www subdomains
    - "www.homelabhelpdesk.com"
    - "www.ipleek.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fairer-pages/
      backendRefs:
        - name: fairer-pages
          port: 8023
